[package]
name = "rustui_playground"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>"]
edition = "2021"

[dependencies]


[dev-dependencies]
druid = "0.7.0"
iced = { version = "0.4", features = ["image", "debug", "tokio"]}
tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[[example]]
name = "druid"
path = "examples/druid.rs"

[[example]]
name = "iced"
path = "examples/iced.rs"
